v2.1.1
----------------------------------------------------------------------------------------------------
 * Fixed a bug where the "acme-tls/1" protocol setting was not recognized on the base server
   (with "MDBaseServer on").
 * ACME errors returned during account creation are now added to the job log.
 * A missing ServerAdmin is now properly logged at the renewal job.

v2.1.0
----------------------------------------------------------------------------------------------------
 * fixed a crash in "server-status" handler when stapling was enabled but not status information
   could be found.
 * toning down some INFO level logging to DEBUG or lower.
 * new directive 'MDCertificateMonitor' to allow configuration of the check HTML links rendered
   in the server-status page.
 * server-status timestamps now in a better readable format. Some columns have been merged.
 * Much more verbose data logging when OCSP responses could not be parsed.
 * Fixed a bug with suppressing "Expect" header sending.
 * MDMessageCmd is now also invoked for stapling with reasons 'ocsp-renewed' and 'ocsp-errored'.
 * Fixed a bug where notifications about an expiring certificate were sent out too often.
 * "md-status" handler now also adds OCSP stapling logs to the JSON output.
 * Patch files for Apache trunk and 2.4.x branch are now empty. mod_md will work with
   unpatched copies of those.
 * Converted pytest suite from python2 to python3. "make test" now calls "python3 -m pytest".
 * "server-status" page now carries a new table of all OCSP stapling certificates managed
   by mod_md stapling. Shifted ocsp related information in JSON "md-status" around a bit.
 * New directive "MDStaplingRenewWindow" to configure when OCSP response should be renewed.
 * OCSP response cleanup implemented and test case added.
 * bringing over APLOGNO() number assignments from apache subversion tree.
 * fixed a compile error on warn level about redefintion of AP_ENABLE_EXCEPTION_HOOK. Fixes #132.